--- a/src/content/pages/homepage/index.mdx
+++ b/src/content/pages/homepage/index.mdx
@@ -1,18 +1,15 @@
 ---
-title: Javier Diaz — Software Engineer
+title: Custom Shopify App Developer – Timofey Zaruns
 seo:
-  title: Javier Diaz — Software Engineer
-  description: Hey I'm Javier, a software engineer passionate about interface design and web experiences
+  title: Custom Shopify App Developer – Timofey Zaruns
+  description: Hey, I’m Timofey Zaruns — a Shopify app developer building custom e‑commerce tools, automation, and AI‑enhanced workflows for merchants.
   type: website
-  keywords: keyword, example, demo cv folio
+  keywords: Shopify app developer, custom Shopify apps, Shopify automation, freelance developer, Timofey Zaruns, Shopify integrations, Liquid, Remix, TypeScript
+  canonicalUrl: https://timofeyzaruns.com/
+  twitter:
+    creator: "@timofeyzaruns"
 ---
 
-Hi, I'm Javier Díaz, also known as coderdiaz. I'm a software engineer passionate about interface design and web experiences. I reside in Mexico City with my wife Becky and my dogs.
+Hey, I’m Timofey. I build custom Shopify apps for merchants who need something beyond what’s available in the app store.
 
-For over 6 years, I've been on a journey in the world of UX/UI, having initially trained as an interface designer. I focus on developing and designing user-centered web and mobile applications, as well as marketing sites.
-
-In my free time, I enjoy spending quality time with my family and friends.
-
-I'm an avid reader of Sci-Fi, books about digital products, and technology. I also create educational content by recording videos and developing courses about web development. One of my favorite activities is refactoring the UI of products I use daily to improve their user experience.
-
-I'm always happy to connect and collaborate. Let's work together! 🧡
+I share what I’m building and learning on [YouTube](https://www.youtube.com/@TimofeyZaruns/videos), and I’m always up for connecting with others working in e-commerce.
