chagne seo description

--- a/src/content/pages/homepage/index.mdx
+++ b/src/content/pages/homepage/index.mdx
@@ -2,7 +2,7 @@
 title: Custom Shopify App Developer – Timofey Zaruns
 seo:
   title: Custom Shopify App Developer – Timofey Zaruns
-  description: Hey, I’m Timofey Zaruns — a Shopify app developer building custom e‑commerce tools, automation, and AI‑enhanced workflows for merchants.
+  description: Shopify app developer building custom Shopify apps, automations, and AI tools for merchants and e‑commerce brands.
   type: website
   keywords: Shopify app developer, custom Shopify apps, Shopify automation, freelance developer, Timofey Zaruns, Shopify integrations, Liquid, Remix, TypeScript
   canonicalUrl: https://timofeyzaruns.com/
